--- a/app/css/style.css
+++ b/app/css/style.css
@@ -34,7 +34,7 @@
 }
 
 .upadevatasdiv {
-  background-color: antiquewhite;
+  background-color: whitesmoke;
 }
 .upadevatasdiv h3 {
   font-size: x-large;
