--- a/app/src/home/views/home.scss
+++ b/app/src/home/views/home.scss
@@ -52,7 +52,7 @@
 
 //***************************Upadevatas div*********************************************
 .upadevatasdiv{
-  background-color: antiquewhite;
+  background-color: whitesmoke;
 
   h3{
     font-size: x-large;
