yagam in progress

--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -115,11 +115,11 @@
             </div>
 
             <!-- Left and right controls -->
-            <a class="left carousel-control new-control wow fadeInLeft" href="#myCarousel" role="button" data-slide="prev">
+            <a class="left carousel-control new-control wow fadeInLeft" role="button" data-slide="prev">
                 <span class="fa fa fa-angle-left waves-effect waves-light"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control new-control  wow fadeInRight" href="#myCarousel" role="button" data-slide="next">
+            <a class="right carousel-control new-control  wow fadeInRight" role="button" data-slide="next">
                 <span class="fa fa fa-angle-right waves-effect waves-light"></span>
                 <span class="sr-only">Next</span>
             </a>
