--- a/app/src/yagam/views/yagam.html
+++ b/app/src/yagam/views/yagam.html
@@ -86,7 +86,9 @@
     </div>
 </div>
 
+<div>
 
+</div>
 
 <div class="container-fluid yagam-div-2 wow slideInUp">
     <div class="container text-center">
