pricing div process

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -13,6 +13,10 @@ $rr-gold-light: gold;
 //***************************************************************
 
 
+footer.page-footer {
+  margin-top: 0px !important;
+}
+
 .maindiv{
   height: 200px;
   width:900px;
