--- a/app/src/home/views/home.scss
+++ b/app/src/home/views/home.scss
@@ -15,7 +15,7 @@
     @extend .maketextgold;
     font-size: x-large;
   }
-  #storyhead4{
+  .storyhead4{
     color: $rr-gold-darker;
     font-size: medium;
     //font-weight: lighter !important;
