--- a/app/src/yagam/views/yagam.html
+++ b/app/src/yagam/views/yagam.html
@@ -95,6 +95,11 @@
             filter: brightness(30%);
         }
     }
+
+    #posterImages img{
+        width: 100%;
+        cursor: zoom-in;
+    }
 </style>
 
 <div class="container-fluid yagam-div-1 wow slideInUp">
@@ -201,7 +206,7 @@
 
 <div class="container-fluid yagam-div-3">
     <div class="container text-center">
-        <h4 class="blackText" style="font-weight: 300;">Important People</h4>
+        <h4 class="blackText" style="font-weight: 300;">Mahaniya Sanidhyam</h4>
         <div class="row">
             <div class="col-md-12 col-lg-12 col-xs-12 text-center yagam-people-div">
                 <img style="height: 150px;width: 150px;" src="images/yagam/dp1.jpg" class="img-circle  hoverable waves-effect waves-orange">
@@ -265,5 +270,31 @@
             </div>
         </div>
         <br><br><br>
+    </div>
+</div>
+
+<div class="yagam-div-4">
+    <div class="container text-center">
+        <h4>Posters and Brochures</h4>
+        <div id="posterImages" class="wow slideInUp docs-pictures clearfix row">
+            <div class="col-md-4 col-lg-4">
+                <li><img data-original="images/yagam/poster/poster1.jpg" src="images/yagam/poster/poster1.jpg" alt="Maha Gayathri Yagam Brochure"></li>
+            </div>
+            <div class="col-md-4 col-lg-4">
+            <li><img data-original="images/yagam/poster/poster2.jpg" src="images/yagam/poster/poster2.jpg" alt="Maha Gayathri Yagam Brochure Front"></li>
+            </div>
+            <div class="col-md-4 col-lg-4">
+            <li><img  data-original="images/yagam/poster/poster3.jpg" src="images/yagam/poster/poster3.jpg" alt="Maha Gayathri Yagam Brochure Back"></li>
+            </div>
+
+            <div class="col-md-4 col-lg-4">
+            <li><img data-original="images/yagam/poster/poster4.jpg" src="images/yagam/poster/poster4.jpg" alt="Invitation & request to the Other Temple trust members for the Swagatha Sangam"></li>
+            </div>
+
+            <div class="col-md-4 col-lg-4">
+            <li><img data-original="images/yagam/poster/poster5.jpg" src="images/yagam/poster/poster5.jpg" alt="KappuKettu Accouncement"></li>
+            </div>
+
+        </div>
     </div>
 </div>
