--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -158,7 +158,7 @@
         <div class="container text-center">
             <h2>DEVI</h2>
             <br><br><br><br><br><br><br><br>
-            <h5>Om Sree: Sree: Rajarajeswaryey nama:</h5>
+            <h5>Sreemath: VadakkeKunnesswari</h5>
             <button type="button" class="btn btn-link" data-target="#historyModal" data-toggle="modal" style="color: white;">Read More</button>
         </div>
         <div class="modal fade" id="historyModal" role="dialog">
@@ -209,7 +209,7 @@
     <section class="parallax  wow fadeInUp" id="Yagamdiv">
         <div class="container text-center">
            <h2 class="whiteText">Yagam</h2>
-            <h5 class="whiteText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</h5>
+            <h5 class="whiteText"> Bharat Land is getting ready again for Sree Maha Gayatri Yagam ,the greatest of all yagas ever held in the whole world in which great saints,vedic scholars and thantric Acharyas are joining together who adore Bharat Culture and try their best to strengthen it with all their might !</h5>
             <button style="color: white;" type="button" class="btn btn-link" ui-sref="yagam">Read More</button>
         </div>
     </section>
