--- a/app/src/contact/views/contact.html
+++ b/app/src/contact/views/contact.html
@@ -78,8 +78,8 @@
         <br>
 
     </div>
-    <div class="people-div row">
-        <div class="container-fluid text-center">
+    <div class="people-div">
+        <div class="text-center container">
             <h4 class="maketextgold" style="font-size: x-large;font-weight: 400;">The office bearers of the Trust</h4>
             <hr>
             <div class="col-md-1 col-lg-1"></div>
