--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -186,7 +186,7 @@
             <br>
             <img src="images/ganesh.png" alt="sree ganesha" style="width: 50px;">
             <br><br>
-            <span style="color:darkgoldenrod;">Ganapathy shrine is situated next to the Sreekovil, at the north-western corner.</span>
+            <span style="color:darkgoldenrod;">Sree Maha Ganapathy shrine is situated next to the Sreekovil, at the north-western corner.</span>
             <h3>UPADEVATAS</h3>
             <h4></h4>
             <br>
