--- a/app/src/yagam/views/yagam.html
+++ b/app/src/yagam/views/yagam.html
@@ -104,7 +104,7 @@
 
 <div class="container-fluid yagam-div-1 wow slideInUp">
     <div class="container text-center ">
-        <h4>SREE  MAHAGAYATHREE YAGAM</h4>
+        <h4>SREE  MAHAGAYATHRI YAGAM</h4>
         <span style="color:lightgrey;font-size: small;">Conducted By Vadakkekunnathu Sree Raja Rajeswari Devi Trust</span><br>
         <span style="color:lightgrey;font-size: small;">On behalf of, Sree Mookambika Mission Charitable Trust, India</span>
         <br><br><br>
@@ -118,7 +118,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h5 class="modal-title">SREE  MAHAGAYATHREE YAGAM 2016</h5>
+                    <h5 class="modal-title">SREE  MAHAGAYATHRI YAGAM 2016</h5>
                 </div>
                 <div class="modal-body">
                     <span>1.   Bharat Land is getting ready again for Sree Maha Gayatri Yagam ,the greatest of all
