vilambara sthoopam. Added video

--- a/app/src/gallery/views/gallery.html
+++ b/app/src/gallery/views/gallery.html
@@ -28,7 +28,7 @@
     <div class="container">
         <h3 class="maketextgold">Gallery</h3>
         <ul class="wow slideInUp docs-pictures clearfix">
-
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/ggaG3uD.jpg" src="http://i.imgur.com/ggaG3uDs.jpg" alt="Sthoopam at kadappakada junction, kollam"></li>
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/NBdC18eh.jpg" src="http://i.imgur.com/NBdC18es.jpg" alt="Website Inauguration"></li>
              <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/myFkssPh.jpg" src="http://i.imgur.com/myFkssPs.jpg" alt="Kappu kettu - For Sree Maha gayathri yagam"></li>
              <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/5eXbjM8h.jpg" src="http://i.imgur.com/5eXbjM8s.jpg" alt=""></li>
