new changes. modified contacts. removed 2 guys

--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -210,7 +210,7 @@
     <section class="parallax  wow fadeInUp" id="Yagamdiv">
         <div class="container text-center">
            <h2 class="whiteText">Sree Maha Gayathri Yagam</h2>
-            <h5 class="whiteText"> Bharat Land is getting ready again for Sree Maha Gayatri Yagam ,the greatest of all yagas ever held in the whole world in which great saints,vedic scholars and thantric Acharyas are joining together who adore Bharat Culture and try their best to strengthen it with all their might !</h5>
+            <h5 class="whiteText"> Bharat Land witnessed Sree Maha Gayatri Yagam ,the greatest of all yagas ever held in the whole world in which great saints,vedic scholars and thantric Acharyas joined together who adore Bharat Culture and strengthened it with all their might !</h5>
             <button style="color: white;" type="button" class="btn btn-link" ui-sref="yagam">Read More</button>
             <br>
             <div class="row">
