--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -146,7 +146,7 @@ html, body {
     background: $nav-underline-color;
     border: none;
     transition: .3s ease-in-out;
-    margin-left: 20%;
+    margin-left: 24%;
   }
 }
 .rrnavbar-fixed {
@@ -235,23 +235,23 @@ html, body {
 
 
 .rr-margin-left-20{
-  margin-left: 20% !important;
+  margin-left: 24% !important;
 }
 .rr-margin-left-30{
-  margin-left: 30% !important;
+  margin-left: 35% !important;
 }
 .rr-margin-left-40{
-  margin-left: 40% !important;
+  margin-left: 45% !important;
 }
 .rr-margin-left-50{
-  margin-left: 50% !important;
+  margin-left: 55% !important;
 }
 .rr-margin-left-60{
-  margin-left: 60% !important;
+  margin-left: 66% !important;
 }
-.rr-margin-left-70{
-  margin-left: 70% !important;
-}
+//.rr-margin-left-70{
+//  margin-left: 70% !important;
+//}
 //
 //.item1 .item2 .item3 .item4 .item5 .item6{
 //  width: 100px !important;
@@ -275,9 +275,9 @@ html, body {
 .item5:hover ~ #floatingline {
   @extend .rr-margin-left-60;
 }
-.item6:hover ~ #floatingline {
-  @extend .rr-margin-left-70;
-}
+//.item6:hover ~ #floatingline {
+//  @extend .rr-margin-left-70;
+//}
 
 .goldline{
   height: 1px;
